2003-04-07  Philippe Elie  <phil.el@wanadoo.fr>

	* pp/op_to_source.cpp: make each line be prefixed with the samples
	counts. It was too hard to find samples inside prevous format.

2003-04-07  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/string_manip.cpp: work around for gcc 2.95
	* p/op_to_source.cpp: minor cleanup

2003-04-07  John Levon  <levon@movementarian.org>

	* pp/op_to_source.cpp: cheat a bit to get
	better indentatioon on the default setup, by
	widening counter width to 7.

2003-04-07  John Levon  <levon@movementarian.org>

	* pp/op_to_source.cpp: append symbol summary
	annotations separate from the prolog samples on
	the same line.

2003-04-07  John Levon  <levon@movementarian.org>

	* pp/op_to_source.cpp: only output line 0 annotation
	if samples found there.

2003-04-07  John Levon  <levon@movementarian.org>

	* utils/opcontrol: make sure --ctrX-event=none gets noticed

2003-04-06  John Levon  <levon@movementarian.org>

	* libutil++/string_manip.h:
	* libutil++/string_manip.cpp: remove ws_prefix(). Add
	format_percent().

	* pp/op_to_source.cpp: make each line be prefixed with
	the sample counts, instead of on a line above, to preserve
	line numbering.

2003-04-06  John Levon  <levon@movementarian.org>

	* pp/op_to_source.cpp: some renamings for clarity

2003-04-06  John Levon  <levon@movementarian.org>

	* pp/op_to_source.cpp: move extract_blank_at_begin() to ...

	* libutil++/string_manip.cpp: ... here, and rename as
	ws_prefix().
	
2003-04-06  John Levon  <levon@movementarian.org>

	* pp/op_to_source.cpp: prefix comment lines.
	Output the general footer on each separate file.
	Output the info at the bottom when outputting
	separate files (towards maintaining line numbering).

2003-04-06  John Levon  <levon@movementarian.org>

	* pp/op_to_source.cpp: construct a file-scope
	cmdline string, instead of passing it around.

2003-04-06  John Levon  <levon@movementarian.org>

	* libregex/op_regexp.cpp: re-arrange a bit
