@@ -1,3 +1,10 @@
+2003-04-08  Philippe Elie  <phil.el@wanadoo.fr>
+
+	* libutil++/op_exception.h: op_runtime_error is no longer abstract
+
+	* libregex/op_regex.h: comment and tidy
+	* libregex/op_regex.cpp: tidy
+
 2003-04-07  Philippe Elie  <phil.el@wanadoo.fr>
 
 	* pp/op_to_source.cpp: make each line be prefixed with the samples
